[package]
name = "payonator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
csv-async = { version = "1.3.0", features = ["tokio", "tokio-stream", "with_serde"] }
monostate = "0.1.13"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.15"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
